$Id$

2004.02.29 [Olivier]
  * add Gobject.Data.caml to store caml values in GtkTreeModels.

2004.02.15 [Olivier]
  * change type of gdk_drag_status: argument is drag_action option
    instead of drag_action list

2004.01.27 [Jacques]
  * add GWindow.dialog_any (for glade)
  * restructure dialog code

2004.01.21 [Olivier]
  * GtkColorButton and GtkFontButton (2.4)

2004.01.15 [Olivier]
  * add gtk_tree_view_column_set_cell_data_func
  * log error messages if ml_gtktree callbacks raise exceptions
  * fix the types of some callbacks in GtkTreeSortable 
    and GtkTreeModelFilter

In lablgtk2-20040113:

2004.01.13 [Jacques]
  * revert to GWindow.window_skel/window
  * prepare snapshot

2004.01.08 [Olivier]
  * GtkTreeModel{Sort,Filter} fixes
  * added some missing GtkTreeModel methods
    (get_iter_first, iter_has_child, iter_n_children, flags, foreach)
  * in wrappers, added a function for converting a C flags value into
    a variant list (the reverse of the Make_Flags_val macro)

2004.01.04 [Olivier]
  * support for GtkEntryCompletion (2.4)

2003.12.21 [Olivier]
  * add event-after signal for widgets

2003.12.20 [Olivier]
  * make the comparison function use gtk_tree_path_compare
    for Gtk.tree_path values.

2003.12.19 [Olivier]
  * added support for GtkTreeSortable, GtkTreeModelSort
    and GtkTreeModelFilter (2.4)
  * fixes for GtkComboBox
  * GTree.view_column inherit from GTree.cell_layout,
    add a few methods to GTree.view_column

2003.12.17 [Jacques]
  * some additions/improvements to lablgladecc

2003.12.13 [Olivier]
  * More GTK 2.4 support:
    Action-based menus and toolbars
  * added GtkData.AccelGroup.parse

2003.12.10 [Olivier]
  * support for GTK 2.4 widgets: 
    GtkComboBox, GtkExpander, GtkFileChooser

2003.11.30 [Olivier]
  * move event method of GRange.scrollbar in GRange.range (GtkScale
    widgets also receive events), removed GRange.scrollbar class
  * added event method in GTree.view, GRange.ruler

2003.10.30 [Jacques]